# ekra_help

./: package-lock.json  pyproject.toml
help/: index.html  package-lock.json  package.json
help/src/: App.vue  main.py  main.ts  style.css
help/src/components/: Dragg.vue  directory.vue  directoryNewArticle.vue  ekra-menu-bar.vue  empty.vue  float.vue  menu_edit.vue  save-choise.vue  sidebar.vue  tiptap.vue
help/src/components/box/: fifthBox.vue  firstBox.vue  fourthBox.vue  secondBox.vue  thirdBox.vue
help/src/components/smallComponents/: image_edit.vue  pencil.vue  table.vue
help/src/data/json/: articles.json
help/src/js/Image/: custom-image.js
help/src/store/: store.ts
help/src/ts/: ColorHighlighter.ts  DraggableItem.ts  SmilieReplacer.ts
help/src/ts/Image/: Image.ts
help/src/ts/Title/: Doc.ts  Title.ts
help/src/ts/video/: videoEdit.ts
